# Text2KG

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
client/: index.html  package.json  tsconfig.tsbuildinfo
client/src/: App.tsx  GraphEditor.tsx  api.ts  graph.ts  graphml.ts  main.tsx  styles.css  types.ts
scrape/: QUICK_START.md  __init__.py  bookmark_urls.txt  launch_edge_debug.ps1  open_x_bookmarks_browser.ps1  run_x_bookmarks_main.ps1  run_x_bookmarks_ui.ps1  start_x_bookmarks_workflow.ps1  x_bookmarks_pipeline.py  x_bookmarks_scrape.py  x_bookmarks_ui.py  x_bookmarks_viewer.py
server/: package.json
server/src/: index.ts
